--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
+    "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5"
   },
